--- a/index.html
+++ b/index.html
@@ -6,9 +6,63 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>Čus lidi, tohle je moje stránka, doufám že se ti tu bude líbit.</h1>
+    <img src="imgs/ben.jfif" alt="Scuffed Talking Ben Model">
+    <h3>Tabulka oblíbených her</h3>
     <table>
-        <tr> <th>jedna</th> <th>dva</th> <th>tři</th> </tr>
-        <tr> <td>OMEGA</td> <td>DELTA</td> <td>ALFA</td> </tr>
+        <th>Rank: </th> <th>Jméno hry: </th>
+        <tr> <td>S</td> <td>Outer Wilds</td></tr>
+        <tr> <td>A</td> <td>Minecraft</td> <td>Lethal Company</td></tr>
+        <tr> <td>B</td> <td>GTA V</td></tr>
+        <tr> <td>C</td> <td>Anatonda the Game</td></tr>
     </table>
+
+    <h3>Seznam věcí na nákum</h3>
+    <ol type="1">
+        <li>Rohlíky</li>
+        <li>Rohlíky</li>
+        <li>Rohlíky</li>
+        <ul>
+            <li>ROHLÍKY</li>
+            <li>ROHLÍKY</li>
+            <li>ROHLÍKY</li>
+            <li>ROHLÍKY</li>
+            <li>ROHLÍKY</li>
+            <li>ROHLÍKY</li>
+            <li>ROHLÍKY</li>
+            <li>ROHLÍKY</li>
+        </ul>
+        <li>... a pak ještě trochu rohlíků</li>
+    </ol>
+
+    <h3>Seznam s římskými číslicemi</h3>
+    <ol type="I">
+        <li>Pneumonoultramicroscopicsilicovolcanoconiosis</li>
+        <li>Globglogabgalab</li>
+        <li>Trinitrotoulen</li>
+        <li>H2SO4</li>
+    </ol>
+
+    <h3>Školní pomůcky</h3>
+    <table>
+        <tr>
+             <th>Předmět</th> 
+             <th>Množství</th>
+        </tr>
+        <tr>    
+            <td>Tužka</td>
+            <td>0</td>
+
+        </tr>
+        <tr>
+            <td>Propiska</td>
+            <td>0</td>
+        </tr>
+        <tr>
+            <td>Herní Grafická Karta RTX 4090 (tak určitě)     </td>
+            <td>22</td>
+        </tr>
+    </table>
+
 </body>
 </html>
