--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Čus lidi, tohle je moje stránka, doufám že se ti tu bude líbit.</h1>
+    <h1>Dobrý den, tohle je moje stránka, doufám že se vám tu bude líbit.</h1>
     <img src="imgs/ben.jfif" alt="Scuffed Talking Ben Model">
     <h3>Tabulka oblíbených her</h3>
     <table>
